# effective-python

./: Makefile  index.ipynb  main.ipynb  pyproject.toml
docs/: index.html
