[tool.poetry]
name = "effective_python"
version = "0.1.0"
description = ""
authors = ["ChihYu Yeh <chihyu.jimmy.yeh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
